--- a/css/styles.css
+++ b/css/styles.css
@@ -1,223 +1,322 @@
 :root {
---acсent-color: #2196F3;
---primary-white-color: #ffffff;
+  --acсent-color: #2196f3;
+  --primary-white-color: #ffffff;
 
---dark-text-color: #212121;
---black-text-color: #000000;
---grey-text-color: #757575;
---transparent-text-color: rgba(255, 255, 255, 0.6);
+  --dark-text-color: #212121;
+  --black-text-color: #000000;
+  --grey-text-color: #757575;
+  --transparent-text-color: rgba(255, 255, 255, 0.6);
 
---dark-background-color: #2F303A;
---grey-background-color: #F5F4FA;
+  --dark-background-color: #2f303a;
+  --grey-background-color: #f5f4fa;
 
---main-font:'Roboto', sans-serif;
---logo-font: 'Raleway', sans-serif;
+  --main-font: 'Roboto', sans-serif;
+  --logo-font: 'Raleway', sans-serif;
 }
 
+/* RESET */
+/* Стили для обнуления верхних отступов у элементов */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+/* Свойства для корректного отображения картинок */
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
 
 /* FOR ALL SITE */
+
 body {
-    background-color: var(--primary-white-color);
-    color: var(--grey-text-color);
-    font-size: 14px;
-    font-family: var(--main-font);
-    letter-spacing: 0.03em;
+  background-color: var(--primary-white-color);
+  color: var(--grey-text-color);
+  font-size: 14px;
+  font-family: var(--main-font);
+  letter-spacing: 0.03em;
 }
 
 .list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .hiden-title {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .link {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
+}
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
+  outline: 2px solid black;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 /* HEADER */
 
+/* MAIN HEADER */
+.main-header {
+  display: flex;
+  align-items: center;
+}
+
+.main-nav {
+  display: flex;
+  align-items: center;
+  margin-right: auto;
+}
+
 /* logo */
 .logo {
-    text-decoration: none;
-    font-family: var(--logo-font);
-    color: var(--acсent-color);
-    font-size: 26px;
-    line-height: 1.19;
+  text-decoration: none;
+  font-family: var(--logo-font);
+  color: var(--acсent-color);
+  font-size: 26px;
+  line-height: 1.19;
+  margin-right: 92px;
 }
 
 .studio-black {
-    color: var(--black-text-color);
+  color: var(--black-text-color);
 }
 
 .studio-white {
-    color: var(--primary-white-color);
+  color: var(--primary-white-color);
 }
 
 /* menu */
 .menu {
-    color: var(--dark-text-color);
-    font-weight: 500;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
+  color: var(--dark-text-color);
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .site-nav .link.current {
-    color: var(--acсent-color);
+  color: var(--acсent-color);
+}
+
+.site-nav {
+  display: flex;
+}
+
+.menu-item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.cont-list {
+  display: flex;
+}
+
+.cont-item:not(:last-child) {
+  margin-right: 48px;
 }
 
 .contact {
-    font-weight: 500;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 
 .link:hover,
 .link:focus,
 .link:active {
-    color: var(--acсent-color);
+  color: var(--acсent-color);
 }
-
 
 /* STUDIO */
 
 /* hero */
-.hero{
-    background-color: var(--dark-background-color);
+.hero {
+  background-color: var(--dark-background-color);
+  text-align: center;
 }
 
 .hero-title {
-    color: var(--primary-white-color);
-    font-weight: 900;
-    font-size: 44px;
-    text-transform: uppercase;
-    line-height: 1.36;
-    letter-spacing: 0.06em;
-    text-align: center;
+  color: var(--primary-white-color);
+  font-weight: 900;
+  font-size: 44px;
+  text-transform: uppercase;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+  text-align: center;
+  margin-bottom: 30px;
 }
 
 .btn {
-    cursor: pointer;
-    font-family: inherit;
+  cursor: pointer;
+  font-family: inherit;
 }
 
-.hero-btn{
-    background-color: var(--acсent-color);
-    color: var(--primary-white-color);
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.875;
-    letter-spacing: 0.06em;
+.hero-btn {
+  background-color: var(--acсent-color);
+  color: var(--primary-white-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+  padding: 10px 32px;
+  border: none;
+  border-radius: 4px;
 }
-
 
 /* about-us */
+.section.no-padding {
+  padding-top: 94px;
+  padding-bottom: 0;
+}
+
 .section-title {
-    color: var(--dark-text-color);
-    font-size: 36px;
-    line-height: 1.17;
-    text-align: center;
+  color: var(--dark-text-color);
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  padding-bottom: 50px;
+}
+
+.about-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.about-item {
+  width: 270px;
 }
 
 .about-title {
-    color: var(--dark-text-color);
-    text-transform: uppercase;
-    font-size: 14px;
-    line-height: 1.14;
+  color: var(--dark-text-color);
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 1.14;
+  padding-bottom: 10px;
 }
 
 .about-text {
-    line-height: 1.71;
+  line-height: 1.71;
 }
 
 /* what we do */
 
+.img-list {
+  display: flex;
+  justify-content: space-between;
+}
+
 /* our team */
 .team {
-    background-color: var(--grey-background-color);
+  background-color: var(--grey-background-color);
 }
 
+.team-list {
+  display: flex;
+  justify-content: space-between;
+}
 .team-item {
-    background-color: var(--primary-white-color);
+  background-color: var(--primary-white-color);
 }
 
-.team-item-title {
-    color: var(--dark-text-color);
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.1875;
+.team-img {
+  margin-bottom: 30px;
 }
 
-.team-item-text {
-    font-size: 16px;
-    line-height: 1.1875;
+.team-title {
+  color: var(--dark-text-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.1875;
+  margin-bottom: 10px;
 }
 
+.team-text {
+  font-size: 16px;
+  line-height: 1.1875;
+}
 
 /* PORTFOLIO */
 
 .portfolio-btn {
-    background-color: var(--grey-background-color);
-    color: var(--dark-text-color);
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.625;
+  background-color: var(--grey-background-color);
+  color: var(--dark-text-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.625;
 }
 
 .btn-list .portfolio-btn.active {
-    background-color: var(--acсent-color);
-    color: var(--primary-white-color);
+  background-color: var(--acсent-color);
+  color: var(--primary-white-color);
 }
 
 .portfolio-btn:hover,
 .portfolio-btn:focus,
 .portfolio-btn:active {
-    background-color: var(--acсent-color);
-    color: var(--primary-white-color);
+  background-color: var(--acсent-color);
+  color: var(--primary-white-color);
 }
 
 .portfolio-title {
-    color: var(--dark-text-color);
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
+  color: var(--dark-text-color);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
 }
 
 .portfolio-text {
-    font-size: 16px;
-    line-height: 1.875;
+  font-size: 16px;
+  line-height: 1.875;
 }
-
 
 /* FOOTER */
 .footer {
-    background-color: var(--dark-background-color);
+  background-color: var(--dark-background-color);
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .address {
-    font-style: normal;
-    line-height: 1.71;
+  font-style: normal;
+  line-height: 1.71;
 }
 
 .physical-adds {
-    color: var(--primary-white-color);
-    text-decoration: none;
+  color: var(--primary-white-color);
+  text-decoration: none;
 }
 
 .contact-adds {
-    color: rgba(255, 255, 255, 0.6);
+  color: rgba(255, 255, 255, 0.6);
 }
