--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,6 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 1200px;
-  outline: 2px solid black;
   padding-left: 15px;
   padding-right: 15px;
 }
@@ -103,8 +102,15 @@ body {
   color: var(--acсent-color);
   font-size: 26px;
   line-height: 1.19;
+}
+
+.logo.top {
   margin-right: 92px;
 }
+
+/* .logo.bottom {
+  margin-bottom: 50px;
+} */
 
 .studio-black {
   color: var(--black-text-color);
@@ -179,6 +185,8 @@ body {
 .btn {
   cursor: pointer;
   font-family: inherit;
+  border: none;
+  border-radius: 4px;
 }
 
 .hero-btn {
@@ -189,8 +197,6 @@ body {
   line-height: 1.875;
   letter-spacing: 0.06em;
   padding: 10px 32px;
-  border: none;
-  border-radius: 4px;
 }
 
 /* about-us */
@@ -258,14 +264,27 @@ body {
   font-size: 16px;
   line-height: 1.1875;
   margin-bottom: 10px;
+  text-align: center;
 }
 
 .team-text {
   font-size: 16px;
   line-height: 1.1875;
+  text-align: center;
+  margin-bottom: 30px;
 }
 
 /* PORTFOLIO */
+
+.btn-list {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.btn-item:not(:last-child) {
+  margin-right: 8px;
+}
 
 .portfolio-btn {
   background-color: var(--grey-background-color);
@@ -273,6 +292,7 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.625;
+  padding: 6px 22px;
 }
 
 .btn-list .portfolio-btn.active {
@@ -287,12 +307,23 @@ body {
   color: var(--primary-white-color);
 }
 
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
+.portfolio-desc {
+  margin: 20px 24px;
+}
+
 .portfolio-title {
   color: var(--dark-text-color);
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  margin-bottom: 4px;
 }
 
 .portfolio-text {
@@ -310,6 +341,7 @@ body {
 .address {
   font-style: normal;
   line-height: 1.71;
+  margin-top: 20px;
 }
 
 .physical-adds {
@@ -319,4 +351,8 @@ body {
 
 .contact-adds {
   color: rgba(255, 255, 255, 0.6);
+}
+
+.contact-item:not(:last-child) {
+  margin-bottom: 9px;
 }
