--- a/css/styles.css
+++ b/css/styles.css
@@ -83,6 +83,10 @@ body {
 
 /* HEADER */
 
+.header {
+  border-bottom: 1px solid #ececec;
+}
+
 /* MAIN HEADER */
 .main-header {
   display: flex;
